welcome.lessons.welcome.array.basics.Array2.scala.code
def backwardN(n:Int){
  for(i <- 0 to n - 1)
  	backward(n)
}

def drawLine(colors:Array[Color]){
  left(); forward(); right()
  var offset:Int = readMessage().toInt
  brushDown()
  setBurshColor(colors(offset))
  for(i <- 1 to getWorldHeight() - 1){
    forward()
  	setBurshColor(colors(i + offset))
  }
  brushUp()
  backwardN(5)
}

override def run() {
  var colors = new Array[Color] (getWorldHeight())
  colors(0) = getGroundColor()
  for(i <- 1 to getWorldHeight() - 1){
    forward()
    colors(i) = getGroundColor()
  }
  backwardN(5)
  for(i <- 0 to getWorldHeight() - 1)
  	drawLine()
}